<resources>
    <string name="app_name">YouTubeApiOnActivity</string>
    <string name="playlist_video_series"> video series</string>
    <string name="playlist">playlist</string>
    <string name="try_again">Try again</string>
    <string name="make_a_life_changing">Make a Life Changing</string>
    <string name="video_title_example">HOW DISPLACEMENT INSTABILITY UNCERTAINTY AFFECT CHILDREN</string>
    <string name="todo">TODO</string>
    <string name="playlist_description_example">In this series, we break down the impact of displacement, instability, violence, and trauma in children, and offer exercises to support children in their healing journey.</string>
    <string name="title_example">Emotional Well-being Healing Practices for Children</string>
<string name="playlist_toolbar">Playlist</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="download">Download</string>
    <string name="select_video_quality">Select video quality</string>
    <string name="_240p">240p</string>

</resources>