<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.playlistvideo.PlayListVideoActivity">

    <include
        android:id="@+id/network_layout"
        layout="@layout/no_internet"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@android:color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/details_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_ui_display"
                    android:text="@string/back"
                    android:textColor="#FF0000"
                    android:textSize="17sp"
                    app:drawableStartCompat="@drawable/ic_arrow_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/playlist_toolbar"
                android:textColor="#FF0000"
                android:textSize="@dimen/twenty_sp" />

        </Toolbar>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:theme="@style/Theme.Design.Light.NoActionBar">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/collapse_toolbar_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FF0000"
                    android:fitsSystemWindows="true"
                    app:expandedTitleGravity="center_horizontal|bottom"
                    app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                    app:title="@string/playlist_video_series">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/grey"
                        android:orientation="vertical"
                        android:paddingHorizontal="@dimen/six_teen"
                        android:paddingVertical="@dimen/twenty_four_dp">

                        <TextView
                            android:id="@+id/playlist_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fitsSystemWindows="true"
                            android:text="@string/title_example"
                            android:textSize="@dimen/twenty_four_sp"
                            android:theme="@style/TextTitle"
                            app:layout_collapseMode="parallax" />

                        <TextView
                            android:id="@+id/playlist_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fitsSystemWindows="true"
                            android:fontFamily="@font/noto_sans"
                            android:text="@string/playlist_description_example"
                            android:textColor="@color/almost_black"
                            android:textSize="15sp"
                            app:layout_collapseMode="parallax" />

                    </LinearLayout>

                </com.google.android.material.appbar.CollapsingToolbarLayout>

            </com.google.android.material.appbar.AppBarLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/six_teen"
                android:baselineAlignBottom="false"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_play_arrow"
                android:theme="@style/ButtonStyle"
                app:fabSize="normal"
                app:layout_anchor="@id/app_bar_detail"
                app:layout_anchorGravity="bottom|end"
                app:tint="@android:color/white" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                tools:ignore="ScrollViewCount">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/series_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginHorizontal="@dimen/six_teen"
                        android:layout_marginTop="@dimen/six_teen"
                        android:gravity="start"
                        android:text="@string/playlist_video_series"
                        android:textColor="@color/black"
                        android:theme="@style/LittleInfo"
                        app:layout_anchor="@id/fab"
                        app:layout_anchorGravity="bottom"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/videosRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="visible"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior"
                        tools:listitem="@layout/playlist_video_item" />
                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>